--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ wheels/
 
 # Virtual Environment
 venv/
-env/
 ENV/
+env/
 
 # IDE specific files
 .idea/
@@ -36,3 +36,11 @@ ENV/
 
 # Logs
 *.log
+
+# Local development settings
+instance/
+.webassets-cache
+
+# System Files
+.DS_Store
+Thumbs.db
