--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,7 @@
-appdirs==1.4.4
-beautifulsoup4==4.13.4
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.1.31
-chardet==5.2.0
-charset-normalizer==3.4.1
-click==8.1.8
-flask==3.0.2
-flask-wtf==1.2.1
-frozendict==2.4.6
-google-ai-generativelanguage==0.4.0
-google-api-core==2.24.2
-google-auth==2.39.0
-google-generativeai==0.3.2
-googleapis-common-protos==1.70.0
-grpcio==1.71.0
-grpcio-status==1.62.3
-html5lib==1.1
-idna==3.10
-itsdangerous==2.2.0
-jinja2==3.1.6
-lxml==5.4.0
-markupsafe==3.0.2
-multitasking==0.0.11
-numpy==2.2.5
-pandas==2.2.3
-peewee==3.17.9
-pillow==11.2.1
-pip==24.3.1
-platformdirs==4.3.7
-proto-plus==1.26.1
-protobuf==4.25.7
-pyasn1==0.6.1
-pyasn1-modules==0.4.2
-python-dateutil==2.9.0.post0
+Flask==3.0.2
+yfinance==0.2.36
+pandas==2.1.4
+numpy==1.26.3
+requests==2.31.0
 python-dotenv==1.0.1
-pytz==2025.2
-reportlab==4.1.0
-requests==2.32.3
-rsa==4.9.1
-six==1.17.0
-soupsieve==2.7
-tqdm==4.67.1
-typing-extensions==4.13.2
-tzdata==2025.2
-urllib3==2.4.0
-uv==0.6.16
-webencodings==0.5.1
-werkzeug==3.1.3
-wtforms==3.2.1
-yfinance==0.2.56
+Werkzeug==3.0.1
